start-sanitize-tx19
Wed Nov  5 11:14:44 1997  Gavin Koch  <gavin@cygnus.com>

	* config.sub: Move tx19 configury to reduce spurious differences
	with gcc/config.sub.

end-sanitized-tx19
start-sanitize-tx49
Wed Nov  5 11:14:44 1997  Gavin Koch  <gavin@cygnus.com>

	* config.sub: Move tx49 configury to reduce spurious differences
	with gcc/config.sub.

end-sanitized-tx49
start-sanitize-d30v
Thu Oct 30 11:09:29 1997  Michael Meissner  <meissner@cygnus.com>

	* configure.in (d30v-*-*): Configure GCC now.

end-sanitize-d30v
start-sanitize-tx49
Wed Oct 29 16:52:43 1997  Gavin Koch  <gavin@cygnus.com>

	* config.sub: Add tx49 configury.

end-sanitize-tx49
Mon Oct 27 13:17:24 1997  Stan Shebs  <shebs@andros.cygnus.com>

	* configure.in: Remove a "second pass" of tweaking noconfigdirs,
	is no longer needed.

Mon Oct 27 12:03:53 1997  Jason Merrill  <jason@yorick.cygnus.com>

	* Makefile.in: check-target-libio depends on all-target-libstdc++.

start-sanitize-vr5400
Wed Oct 22 14:05:29 1997  Andrew Cagney  <cagney@b1.cygnus.com>

	* config.sub (maybe_os): Add mips64vr5400.

end-sanitize-vr5400
Mon Oct 20 15:28:49 1997  Klaus K"ampf  <kkaempf@progis.de>

	* makefile.vms: Fix to work with DEC C.

Tue Oct  7 23:58:57 1997  Gavin Koch  <gavin@cygnus.com>

	* config.sub: Add mips-tx39-elf to marketing names.

Tue Oct  7 14:24:41 1997  Ian Lance Taylor  <ian@cygnus.com>

	* ltmain.sh: Handle symlinks in generated script.

Wed Oct  1 13:11:27 1997  Ian Lance Taylor  <ian@cygnus.com>

	* configure: Handle autoconf style directory options: --bindir,
	--datadir, --includedir, --infodir, --libdir, --libexecdir,
	--mandir, --oldincludedir, --sbindir, --sharedstatedir,
	--sysconfdir.
	* Makefile.in (sbindir, libexecdir, sysconfdir): New variables.
	(sharedstatedir, localstatedir, oldincludedir): New variables.
	(BASE_FLAGS_TO_PASS): Pass down bindir, datadir, includedir,
	infodir, libdir, libexecdir, localstatedir, mandir, oldincludedir,
	sbindir, sharedstatedir, and sysconfdir.
